--- a/index.html
+++ b/index.html
@@ -189,9 +189,18 @@
             <div id="entregas-activas" class="content-page hidden">
                 <h3>Gestão de Encomendas Activas</h3>
                 <table class="table-pedidos">
-                    <thead><tr><th>ID Pedido</th><th>Cliente</th><th>Telefone</th><th>Estado</th><th>Motorista</th><th>Acção</th></tr></thead>
-                    <tbody id="active-orders-table-body"></tbody>
-                </table>
+    <thead>
+        <tr>
+            <th>ID Pedido</th>
+            <th>Cliente</th>
+            <th>Telefone</th>
+            <th>Estado</th>
+            <th>Motorista</th>
+            <th>Código</th> <th>Acção</th>
+        </tr>
+    </thead>
+    <tbody id="active-orders-table-body"></tbody>
+</table>
             </div>
 
             <div id="historico" class="content-page hidden">
@@ -201,9 +210,18 @@
                     <i class="fas fa-search"></i>
                 </div>
                 <table class="table-pedidos">
-                    <thead><tr><th>ID Pedido</th><th>Cliente</th><th>Natureza do Pedido</th><th>Motorista</th><th>Duração</th><th>Acções</th></tr></thead>
-                    <tbody id="history-orders-table-body"></tbody>
-                </table>
+    <thead>
+        <tr>
+            <th>ID Pedido</th>
+            <th>Cliente</th>
+            <th>Natureza do Pedido</th>
+            <th>Motorista</th>
+            <th>Duração</th>
+            <th>Código</th> <th>Acções</th>
+        </tr>
+    </thead>
+    <tbody id="history-orders-table-body"></tbody>
+</table>
             </div>
 
             <div id="mapa-tempo-real" class="content-page hidden">
