--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 
     <main class="main-content">
         <header class="main-header">
+            <button class="btn-mobile-menu" id="mobile-menu-toggle">
+                <i class="fas fa-bars"></i>
+            </button>
             <h1 id="main-title">Visão Geral</h1>
             <div class="admin-profile"><span>Olá, Admin</span><i class="fas fa-user-circle"></i></div>
         </header>
@@ -199,6 +202,7 @@
 
             <div id="entregas-activas" class="content-page hidden">
                 <h3>Gestão de Encomendas Activas</h3>
+                <div class="table-container-responsive">
                 <table class="table-pedidos">
     <thead>
         <tr>
@@ -217,6 +221,8 @@
             <div id="historico" class="content-page hidden">
                 <h3>Histórico de Encomendas</h3>
                 <div class="search-container">
+                    </div>
+                <div class="table-container-responsive">
                     <input type="text" id="history-search-input" placeholder="Pesquisar no histórico (ID, Cliente, Motorista...)">
                     <i class="fas fa-search"></i>
                 </div>
