--- a/index.html
+++ b/index.html
@@ -469,5 +469,6 @@
             </div>
     </main>
 
-    <script src="js/common/api.js"></script>         <script src="js/common/auth.js"></script>        <script src="js/common/ui.js"></script>          <script src="js/admin/adminCharts.js"></script>  <script src="js/admin/adminMap.js"></script>      <script src="js/admin/admin.js"></script>        </body>
+    <script src="js/common/api.js"></script>
+</body>
 </html>
