--- a/login-motorista.html
+++ b/login-motorista.html
@@ -8,19 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body class="login-body">
-
-    <div class="login-container">
+<body class="login-body motorista-body"> <div class="login-container">
         <img src="https://i.postimg.cc/VkQKDJ1x/LOGO.png" alt="Logotipo Entregaah Mz" class="login-logo">
+        <h2 style="margin-bottom: 1.5rem; color: var(--text-color);">Portal do Motorista</h2>
         
-        <div class="login-title-icon">
-             <i class="fas fa-motorcycle"></i>
-             <h3>Painel do Motorista</h3>
-        </div>
-
         <form id="driver-login-form">
             <div class="form-group">
-                <label for="email">Email ou Telefone</label>
+                <label for="email">Email</label>
                 <input type="email" id="email" required>
             </div>
             <div class="form-group">
@@ -29,9 +23,32 @@
             </div>
             <button type="submit" class="btn-login">Entrar</button>
         </form>
-         <a href="login.html" class="login-link">É um administrador?</a>
     </div>
 
-    <script src="javascript.js"></script>
+    <div id="custom-alert-modal" class="modal-backdrop hidden">
+        <div class="modal-content modal-alert">
+            <div class="modal-header">
+                <h3 id="custom-alert-title"></h3>
+                <button class="modal-close-btn" onclick="closeCustomAlert()">×</button>
+            </div>
+            <div class="modal-body">
+                <p id="custom-alert-message"></p>
+            </div>
+            <div class="modal-actions">
+                <button type="button" class="btn-submit" onclick="closeCustomAlert()">OK</button>
+            </div>
+        </div>
+    </div>
+    <script src="js/common/api.js"></script>     <script src="js/common/ui.js"></script>      <script src="js/common/auth.js"></script>    <script>
+        // (MELHORIA) Ponto de entrada limpo para o login do motorista
+        document.addEventListener('DOMContentLoaded', () => {
+            const driverLoginForm = document.getElementById('driver-login-form');
+            if (driverLoginForm) {
+                // Anexa o listener ao 'handleLogin' do auth.js, passando o 'role'
+                driverLoginForm.addEventListener('submit', (e) => handleLogin(e, 'driver'));
+            }
+        });
+    </script>
+
 </body>
 </html>
