--- a/login.html
+++ b/login.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Entregaah Mz Dashboard</title>
+    <title>Login Admin - Entregaah Mz</title>
     <link rel="icon" href="https://i.postimg.cc/4xkWBYss/ISOTIPO.png" type="image/png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body class="login-body">
-
-    <div class="login-container">
+<body class="login-body"> <div class="login-container">
         <img src="https://i.postimg.cc/VkQKDJ1x/LOGO.png" alt="Logotipo Entregaah Mz" class="login-logo">
+        <h2 style="margin-bottom: 1.5rem; color: var(--text-color);">Painel Administrativo</h2>
+        
         <form id="login-form">
             <div class="form-group">
-                <label for="email">Email ou Usuário</label>
+                <label for="email">Email</label>
                 <input type="email" id="email" required>
             </div>
             <div class="form-group">
@@ -22,9 +23,32 @@
             </div>
             <button type="submit" class="btn-login">Entrar</button>
         </form>
-        <a href="login-motorista.html" class="login-link">É um motorista?</a>
     </div>
 
-    <script src="javascript.js"></script>
+    <div id="custom-alert-modal" class="modal-backdrop hidden">
+        <div class="modal-content modal-alert">
+            <div class="modal-header">
+                <h3 id="custom-alert-title"></h3>
+                <button class="modal-close-btn" onclick="closeCustomAlert()">×</button>
+            </div>
+            <div class="modal-body">
+                <p id="custom-alert-message"></p>
+            </div>
+            <div class="modal-actions">
+                <button type="button" class="btn-submit" onclick="closeCustomAlert()">OK</button>
+            </div>
+        </div>
+    </div>
+    <script src="js/common/api.js"></script>     <script src="js/common/ui.js"></script>      <script src="js/common/auth.js"></script>    <script>
+        // Ponto de entrada limpo para o login do admin
+        document.addEventListener('DOMContentLoaded', () => {
+            const loginForm = document.getElementById('login-form');
+            if (loginForm) {
+                // Anexa o listener ao 'handleLogin' do auth.js, passando o 'role'
+                loginForm.addEventListener('submit', (e) => handleLogin(e, 'admin'));
+            }
+        });
+    </script>
+
 </body>
 </html>
