Fix: Corrige erro 'openChartResetModal is not defined'

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h3>Resetar Estatísticas</h3>
-                        <button class="modal-close-btn" onclick="closeChartResetModal()">×</button>
+                        <button class="modal-close-btn" id="btn-close-chart-reset">×</button>
                     </div>
                     <div class="modal-body">
                         <p>Esta ação é irreversível. Digite a senha de reset para confirmar:</p>
@@ -330,7 +330,7 @@
                     </div>
                     <div class="modal-actions">
                         <button type="button" class="btn-submit btn-danger" id="btn-confirm-chart-reset">Confirmar Reset</button>
-                        <button type="button" class="btn-cancel" onclick="closeChartResetModal()">Cancelar</button>
+                        <button type="button" class="btn-cancel" id="btn-cancel-chart-reset">Cancelar</button>
                     </div>
                 </div>
             </div>
