--- a/painel-de-entrega.html
+++ b/painel-de-entrega.html
@@ -28,7 +28,7 @@
             </section>
 
         <section id="detalhe-entrega" class="hidden">
-            <button class="btn-voltar" onclick="showListaEntregas()">
+            <button class="btn-voltar" id="btn-voltar-lista">
                 <i class="fas fa-arrow-left"></i> Voltar à Lista
             </button>
             <h2 id="detalhe-entrega-title">Detalhes do Pedido #123456</h2>
@@ -81,16 +81,20 @@
         <div class="modal-content modal-alert">
             <div class="modal-header">
                 <h3 id="custom-alert-title"></h3>
-                <button class="modal-close-btn" onclick="closeCustomAlert()">×</button>
+                <button class="modal-close-btn" id="btn-close-alert">×</button>
             </div>
             <div class="modal-body">
                 <p id="custom-alert-message"></p>
             </div>
             <div class="modal-actions">
-                <button type="button" class="btn-submit" onclick="closeCustomAlert()">OK</button>
+                <button type="button" class="btn-submit" id="btn-ok-alert">OK</button>
             </div>
         </div>
     </div>
     <script src="js/common/api.js"></script>
-</body>
+    <script src="js/common/auth.js"></script>
+    <script src="js/common/ui.js"></script>
+    
+    <script src="js/driver/driverTracking.js"></script>
+    <script src="js/driver/driver.js"></script> </body>
 </html>
