Design: Redesenho total para 'Minimal SaaS' (Light Mode)

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             
             <div id="visao-geral" class="content-page">
                 <div class="stats-cards">
-                    <div class="card"><h3>Pendentes</h3><p id="stats-pendentes">...</p></div>
-                    <div class="card"><h3>Em Trânsito</h3><p id="stats-em-transito">...</p></div>
-                    <div class="card"><h3>Concluídas (Hoje)</h3><p id="stats-concluidas-hoje">...</p></div>
-                    <div class="card"><h3>Motoristas Online</h3><p id="stats-motoristas-online">...</p></div>
+                    <div class="card card-warning"><h3>Pendentes</h3><p id="stats-pendentes">...</p></div>
+                    <div class="card card-info"><h3>Em Trânsito</h3><p id="stats-em-transito">...</p></div>
+                    <div class="card card-success"><h3>Concluídas (Hoje)</h3><p id="stats-concluidas-hoje">...</p></div>
+                    <div class="card card-success"><h3>Motoristas Online</h3><p id="stats-motoristas-online">...</p></div>
                 </div>
                 <div class="charts-grid">
                     <div class="chart-container" id="main-chart-container">
