--- a/painel-de-entrega.html
+++ b/painel-de-entrega.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel de Entrega - Entregaah Mz</title>
     <link rel="icon" href="https://i.postimg.cc/4xkWBYss/ISOTIPO.png" type="image/png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="global.css">
+<link rel="stylesheet" href="driver.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
     <script src="https://cdn.socket.io/4.7.0/socket.io.min.js"></script>
