Fix: (MELHORIA: correção do link do mapa)

--- a/index.html
+++ b/index.html
@@ -564,10 +564,7 @@
     
     <script src="js/admin/adminCharts.js"></script>
     <script src="js/admin/adminMap.js"></script>
-    <script src="js/admin/adminApi.js"></script>
-    <script src="js/admin/adminModals.js"></script>
-
-    <script src="js/admin/admin.js"></script>
+    <script src="js/admin/adminApi.js"></script>     <script src="js/admin/adminModals.js"></script>  <script src="js/admin/admin.js"></script>
 
 </body>
 </html>
