--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
             <div class="form-group">
                 <label for="expense-category">Categoria</label>
                 <select id="expense-category" required>
-                    <option value="">-- Selecione --</option>
+                    <option value="">-- Selecione a categoria --</option>
                     <option value="salarios">Salários</option>
                     <option value="renda">Renda</option>
                     <option value="diversos">Diversos</option>
@@ -603,7 +603,7 @@
                     <option value="comunicacao">Comunicação</option>
                     <option value="marketing">Marketing</option>
                     <option value="combustivel">Combustível</option>
-                </select>
+                  </select>
             </div>
             <div class="form-group"><label for="expense-amount">Valor (MZN)</label><input type="number" id="expense-amount" step="0.01" min="0" required></div>
         </div>
